--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,17 @@ crossorigin=""/>
     <script src="./static/data.js" type="text/javascript"></script>
     <script src="./static/script.js" type="text/javascript"></script>
 
+    <div class="container" style="width:1200px">
+    <!--start-->
+        <div id="footr">
+        <!--<h5>Earthquake in the last 7 days.</h5> -->
+        <p align="center" style="color:blue;font-size: 1.5em">Earthquakes in the last 7 days.</p> 
+        </div>        
+        <br>
+
+   
+    <!--end-->
+    </div> 
     
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
